src/snapshots/bminor__parser__test__subscript_expression.snap
---
source: src/parser.rs
expression: "parse_expression(\"x[\")"
---
Err(
    UnexpectedToken(
        "expect expression",
    ),
)
