src/snapshots/bminor__parser__test__unary_expression-3.snap
---
source: src/parser.rs
expression: "parse_expression(\"x++\")"
---
Ok(
    Unary {
        operator: Token {
            kind: PlusPlus,
            lexeme: "++",
            line: 0,
        },
        value: Variable {
            name: Token {
                kind: Identifier,
                lexeme: "x",
                line: 0,
            },
        },
    },
)
