src/snapshots/bminor__parser__test__unary_expression-4.snap
---
source: src/parser.rs
expression: "parse_expression(\"x--\")"
---
Unary {
    operator: Token {
        kind: MinusMinus,
        lexeme: "--",
        line: 0,
    },
    value: Variable {
        name: Token {
            kind: Identifier,
            lexeme: "x",
            line: 0,
        },
    },
}
