src/snapshots/bminor__parser__test__unary_expression.snap
---
source: src/parser.rs
expression: "parse_expression(\"+1\")"
---
Ok(
    Unary {
        operator: Token {
            kind: Plus,
            lexeme: "+",
            line: 0,
        },
        value: Literal {
            value: Token {
                kind: IntegerLiteral,
                lexeme: "1",
                line: 0,
            },
        },
    },
)
